<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fullName">Полное наименование</string>
    <string name="nameFactory">Краткое наименование</string>
    <string name="phone">Телефон</string>
    <string name="email">E-mail</string>
    <string name="web">www.example.com</string>
    <string name="name_grid_contact">Имя:</string>
    <string name="department_grid">Должность:</string>
    <string name="phone_grid">Телефон:</string>
    <string name="mail_grid">E-mail:</string>
</resources>
