<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">


    <ListView
        android:id="@+id/listViewContragent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:layout_weight="2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llFactory"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageFactory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingTop="72dp"
                    android:src="@mipmap/ic_factory" />


                <EditText
                    android:id="@+id/etName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/imageFactory"
                    android:hint="@string/nameFactory"
                    android:inputType="text"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/etFulName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etName"
                    android:layout_toRightOf="@id/imageFactory"
                    android:hint="@string/fullName"
                    android:inputType="text"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:textSize="16dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imagePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:src="@mipmap/ic_phone" />


                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/imagePhone"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/imageMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagePhone"
                    android:layout_gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:src="@mipmap/ic_mail_ru" />


                <EditText
                    android:id="@+id/etMail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etPhone"
                    android:layout_toRightOf="@id/imageMail"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/imageWeb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageMail"
                    android:layout_gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:src="@mipmap/ic_web" />


                <EditText
                    android:id="@+id/etWeb"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etMail"
                    android:layout_toRightOf="@id/imageWeb"
                    android:hint="@string/web"
                    android:inputType="textUri"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:textSize="16dp" />

            </RelativeLayout>
        </LinearLayout>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gvClients"
            android:layout_below="@id/llFactory"
            android:paddingTop="32dp"
            >

        </GridView>
    </RelativeLayout>
</LinearLayout>